[package]
name = "buddy-allocator"
description = "A new buddy allocator that allow custom buddy finding algorithm"
version = "0.0.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/buddy-allocator.git"
# documentation = "https://docs.rs/buddy-allocator"
license = "MIT"
readme = "README.md"
keywords = ["allocator"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
