[package]
name = "customizable-buddy"
description = "A new buddy allocator that allows custom buddy finding algorithm"
version = "0.0.2"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/YdrMaster/buddy-allocator.git"
documentation = "https://docs.rs/customizable-buddy"
license = "MIT"
readme = "README.md"
keywords = ["allocator"]
categories = ["no-std", "memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
